# dfasat

./: CMakeLists.txt  Makefile  apta.cpp  evaluate.cpp  inputdata.cpp  main.cpp  parameters.cpp  safety.cpp  state_feasibility_lp.cpp
evaluation/: kldistance.cpp  num_count.cpp  state_driven.cpp
evaluation/lib/: state_driven.h
lib/: apta.h  evaluate.h  formal_language.h  inputdata.h  parameters.h  safety.h  state_feasibility_lp.h
